--- a/web/package.json
+++ b/web/package.json
@@ -25,7 +25,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "docker:build":  "docker-compose -p deploy build"
   },
   "eslintConfig": {
     "extends": [
